--- a/db/pom.xml
+++ b/db/pom.xml
@@ -50,38 +50,38 @@
 			<!--</plugin>-->
 		<!--</plugins>-->
 	<!--</build>-->
-	<build>
-		<extensions>
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-webdav</artifactId>
-				<version>1.0-beta-2</version>
-			</extension>
-		</extensions>
-		<plugins>
-			<plugin>
-				<artifactId>maven-jar-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-						<configuration>
-							<!-- Need this to ensure application.yml is excluded -->
-							<forceCreation>true</forceCreation>
-							<excludes>
-								<exclude>application.properties</exclude>
-							</excludes>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+	<!--<build>-->
+		<!--<extensions>-->
+			<!--<extension>-->
+				<!--<groupId>org.apache.maven.wagon</groupId>-->
+				<!--<artifactId>wagon-webdav</artifactId>-->
+				<!--<version>1.0-beta-2</version>-->
+			<!--</extension>-->
+		<!--</extensions>-->
+		<!--<plugins>-->
+			<!--<plugin>-->
+				<!--<artifactId>maven-jar-plugin</artifactId>-->
+				<!--<executions>-->
+					<!--<execution>-->
+						<!--<phase>package</phase>-->
+						<!--<goals>-->
+							<!--<goal>jar</goal>-->
+						<!--</goals>-->
+						<!--<configuration>-->
+							<!--&lt;!&ndash; Need this to ensure application.yml is excluded &ndash;&gt;-->
+							<!--<forceCreation>true</forceCreation>-->
+							<!--<excludes>-->
+								<!--<exclude>application.properties</exclude>-->
+							<!--</excludes>-->
+						<!--</configuration>-->
+					<!--</execution>-->
+				<!--</executions>-->
+			<!--</plugin>-->
+			<!--<plugin>-->
+				<!--<groupId>org.apache.maven.plugins</groupId>-->
+				<!--<artifactId>maven-surefire-plugin</artifactId>-->
+			<!--</plugin>-->
+		<!--</plugins>-->
+	<!--</build>-->
 
 </project>
