--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27027
 spring.data.mongodb.database=ctscan
 spring.data.mongodb.repositories.enabled=true
+
+#security.ignored=/**
