--- a/model/pom.xml
+++ b/model/pom.xml
@@ -42,7 +42,12 @@
 			<version>1.16.16</version>
 			<scope>provided</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+    </dependencies>
 
 	<!--<build>-->
 		<!--<plugins>-->
