--- a/core/bower.json
+++ b/core/bower.json
@@ -7,6 +7,10 @@
     "jquery": "~3.2.0",
     "jquery-ui": "~1.12.0",
     "bootstrap": "~3.3.6",
-    "angular": "~1.6.0"
+
+    "angular": "~1.6.0",
+    "angular-ui-router": "~0.4.0",
+    "a0-angular-storage": "~0.0.15",
+    "jwt-decode": "~2.2.0"
   }
 }
