--- a/core/bower.json
+++ b/core/bower.json
@@ -10,7 +10,10 @@
 
     "angular": "~1.6.0",
     "angular-ui-router": "~0.4.0",
+    "angular-animate": "~1.6.0",
+
     "a0-angular-storage": "~0.0.15",
+
     "jwt-decode": "~2.2.0"
   }
 }
