--- a/model/pom.xml
+++ b/model/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>spring-data-commons</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 
 	<!--<build>-->
