--- a/model/pom.xml
+++ b/model/pom.xml
@@ -52,7 +52,12 @@
             <artifactId>validation-api</artifactId>
             <version>RELEASE</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+			<version>RELEASE</version>
+		</dependency>
+	</dependencies>
 
 	<!--<build>-->
 		<!--<plugins>-->
