--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -14,3 +14,5 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1
 
 spring.http.multipart.max-file-size=500MB
 spring.http.multipart.max-request-size=500MB
+
+process.file.executor.maxthread=2
