--- a/core/pom.xml
+++ b/core/pom.xml
@@ -27,17 +27,18 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 
+		<!-- CHANGES IN REAL-TIME -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -48,12 +49,21 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- GET/SET/CONSTRUCTOR ANNOTATIONS -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok-maven</artifactId>
 			<version>1.16.18.1</version>
 			<type>pom</type>
 		</dependency>
+
+		<!-- DATABASE CONFIGURATION -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>pl.inz.ctscan</groupId>
 			<artifactId>model</artifactId>
@@ -64,11 +74,15 @@
             <artifactId>db</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+		<!-- WEB SECURITY by JWT -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
 			<version>0.7.0</version>
 		</dependency>
+
+		<!-- LOGGER LIBRARY -->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
@@ -81,6 +95,8 @@
 			<artifactId>guava</artifactId>
 			<version>23.5-jre</version>
 		</dependency>
+
+
 	</dependencies>
 
 	<build>
