--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,7 +1,16 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27027
-spring.data.mongodb.database=ctscan
-spring.data.mongodb.repositories.enabled=true
+mysql.database.name=ctscan
+spring.datasource.url= jdbc:mysql://localhost:3306/${mysql.database.name}
+spring.datasource.username=root
+spring.datasource.password=mysql
+
+spring.mysql.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# Show or not log for each sql query
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
 
 #security.ignored=/**
 log4j.rootLogger=DEBUG, stdout
