--- a/model/pom.xml
+++ b/model/pom.xml
@@ -52,12 +52,26 @@
             <artifactId>validation-api</artifactId>
             <version>RELEASE</version>
         </dependency>
-		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-mongodb</artifactId>
-			<version>RELEASE</version>
-		</dependency>
-	</dependencies>
+
+		<!-- javax annotations like generatedValue -->
+		<!--<dependency>-->
+			<!--<groupId>javax.persistence</groupId>-->
+			<!--<artifactId>persistence-api</artifactId>-->
+			<!--<version>1.0.2</version>-->
+		<!--</dependency>-->
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+
+    </dependencies>
 
 	<!--<build>-->
 		<!--<plugins>-->
