after change db structure; tests with frames and testFrames

--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=mysql
 spring.mysql.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # Show or not log for each sql query
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
