preparing frames by threads; generate uuid for files

--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -25,3 +25,4 @@ spring.http.multipart.max-file-size=500MB
 spring.http.multipart.max-request-size=500MB
 
 process.file.executor.maxthread=2
+file.generate.uuid=true
