Configuration for changing folder in other environment

--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -1,7 +1,12 @@
+### PART TO MANUAL CONFIGURE ###
 mysql.database.name=ctscan
 spring.datasource.url= jdbc:mysql://localhost:3306/${mysql.database.name}
 spring.datasource.username=root
 spring.datasource.password=mysql
+files.root.folder=/home/ctscan/Projekt/files/
+
+
+### END OF PART TO MANUAL CONFIRE ###
 
 spring.mysql.datasource.driver-class-name=com.mysql.jdbc.Driver
 
