user exists checking

--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -11,7 +11,6 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-
 #security.ignored=/**
 log4j.rootLogger=DEBUG, stdout
 
@@ -21,8 +20,12 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
+#maksymalna wielkość przesyłanego pliku
 spring.http.multipart.max-file-size=500MB
 spring.http.multipart.max-request-size=500MB
 
+#maksymalna ilość wątków przy przetwarzaniu plików
 process.file.executor.maxthread=2
+
+#unikalna nazwa na podstawie uuid dla zapisywanych plików
 file.generate.uuid=true
