--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.mysql.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Show or not log for each sql query
 spring.jpa.show-sql=false
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 #security.ignored=/**
